# antique_bookshop

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  WARP.md  compose.yml  debug_render.py  docker-compose.yml  entrypoint.sh  justfile  manage.py  nginx.conf  package-lock.json  package.json  pyproject.toml  render-deploy.md  render.yaml  requirements.txt  ruff.toml  tailwind.config.js
.github/workflows/: django.yml
.husky/: pre-commit
antique_bookshop/: asgi.py  settings.py  urls.py  wsgi.py
book_shop_here/: admin.py  apps.py  forms.py  import_utils.py  models.py  serializers.py  tests.py  unified_import.py  urls.py  views.py
book_shop_here/management/commands/: createsuperuser_with_data.py  seed_dev_data.py
book_shop_here/migrations/: 0001_initial.py  0002_alter_author_birth_year_alter_author_death_year_and_more.py  0002_alter_book_authors_alter_book_book_id_and_more.py  0002_auto_20250927_2050.py  0003_add_discount_amount_to_order.py  0003_alter_book_authors.py  0003_remove_customer_name_required_and_more.py  0004_add_report_permissions.py  0004_alter_author_first_name.py  0004_employee_birth_date_alter_author_author_id_and_more.py  0005_add_condition_notes_to_book.py  0005_alter_book_book_id.py  0006_alter_order_options.py  0006_book_publisher_alter_author_author_id_and_more.py  0007_groupprofile_alter_employee_position_id_delete_role.py  0007_rename_rating_book_condition.py  0008_auto_20250925_0927.py  0008_rename_retail_price_book_suggested_retail_price.py  0009_customer_secondary_mailing_address_and_more.py  0009_rename_position_id_employee_group.py  0010_alter_employee_secondary_address.py  0010_auto_20250925_1222.py  0011_alter_book_book_status.py  0011_employee_email.py  0012_book_legacy_id_alter_book_book_id_alter_book_title_and_more.py  0012_remove_customer_name_required_customer_city_and_more.py  0013_employee_city.py  0014_customer_name_required.py
book_shop_here/static/book_shop_here/: overrides.css  site.css
book_shop_here/static/css/: tailwind.css
book_shop_here/templates/book_shop_here/: author_delete_confirm.html  author_detail.html  author_form.html  author_list.html  base.html  book_delete_confirm.html  book_detail.html  book_form.html  book_list.html  customer_delete_confirm.html  customer_detail.html  customer_form.html  customer_list.html  docs.html  employee_delete_confirm.html  employee_detail.html  employee_form.html  (+14 more)
book_shop_here/templatetags/: custom_filter.py  custom_filters.py
book_shop_here/tests/: test_crispy_render.py  test_form_actions.py  test_forms.py  test_models.py  test_reports.py  test_unified_import.py  test_views.py  test_xlsx_import.py
book_shop_here/utils/: search.py
book_shop_here/views/: authors.py  base.py  books.py  customers.py  employees.py  groups.py  orders.py  reports.py  setup.py  setup_simple.py  test.py
bookshop/: render_settings.py  settings.py  urls.py
datawizard/: Books_data.xlsx  Books_data_0QKZ47s.xlsx  Books_data_Tb7pGay.xlsx  Books_data_v1km8dR.xlsx  Bookshop_-_Raw_Entry_Data.xlsx  Bookshop_-_Raw_Entry_Data.xlsx_-_Authors.csv  Customer_data.xlsx  Employee_data.xlsx  Employee_data_Hn3pLAw.xlsx  Employee_data_eZs4mmE.xlsx
(+3 files in other folders)
