[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "antique-bookshop"
version = "0.1.0"
description = "Django Antique Bookshop application"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Ethan Vicencio", email = "evicencio5405@gmail.com" }
]
license = { text = "Proprietary" }

dependencies = [
  "django>=5.2.6",
  "gunicorn>=21.0.0",
  "whitenoise>=6.0.0",
  "django-extensions>=4.1.0",
  "django-environ>=0.12.0",
  "psycopg2-binary>=2.9.10",
  "dj-database-url>=3.0.1",
  "django-group-model>=1.0.1",
  "django-crispy-forms>=2.1",
  "crispy-tailwind>=1.0.3",
  "data-wizard>=2.0.0",
  "pandas>=2.3.3",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "pre-commit>=3.7.0",
  "mypy>=1.11.0",
  "django-stubs>=5.0.0",
  "types-psycopg2>=2.9.21.20240819",
  "build>=1.2.1",
  "pandas-stubs>=2.0.0",
]

[tool.mypy]
python_version = "3.10"
plugins = ["mypy_django_plugin.main"]
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
exclude = [
  "book_shop_here/migrations/.*",
]

[[tool.mypy.overrides]]
module = "data_wizard.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "environ"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rest_framework.*"
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "bookshop.settings"

[tool.hatch.build.targets.wheel]
only-include = [
  "bookshop",
  "book_shop_here",
]
